--- a/200.html
+++ b/200.html
@@ -2,29 +2,29 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="/<repository-name>/favicon.png" />
+		<link rel="icon" href="/arijang.github.io/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/<repository-name>/_app/immutable/entry/start.C3gs9kH2.js">
-		<link rel="modulepreload" href="/<repository-name>/_app/immutable/chunks/entry.CtiayDaG.js">
-		<link rel="modulepreload" href="/<repository-name>/_app/immutable/chunks/scheduler.BvLojk_z.js">
-		<link rel="modulepreload" href="/<repository-name>/_app/immutable/entry/app.BU6Dc0AL.js">
-		<link rel="modulepreload" href="/<repository-name>/_app/immutable/chunks/index.D1bVeg09.js">
+		<link rel="modulepreload" href="/arijang.github.io/_app/immutable/entry/start.CMtIwzvF.js">
+		<link rel="modulepreload" href="/arijang.github.io/_app/immutable/chunks/entry.CmbBXyYX.js">
+		<link rel="modulepreload" href="/arijang.github.io/_app/immutable/chunks/scheduler.BvLojk_z.js">
+		<link rel="modulepreload" href="/arijang.github.io/_app/immutable/entry/app.DfGO1O-z.js">
+		<link rel="modulepreload" href="/arijang.github.io/_app/immutable/chunks/index.D1bVeg09.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_ro8z79 = {
-						base: "/<repository-name>",
-						assets: "/<repository-name>"
+					__sveltekit_wecxay = {
+						base: "/arijang.github.io",
+						assets: "/arijang.github.io"
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/<repository-name>/_app/immutable/entry/start.C3gs9kH2.js"),
-						import("/<repository-name>/_app/immutable/entry/app.BU6Dc0AL.js")
+						import("/arijang.github.io/_app/immutable/entry/start.CMtIwzvF.js"),
+						import("/arijang.github.io/_app/immutable/entry/app.DfGO1O-z.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
