--- a/200.html
+++ b/200.html
@@ -2,29 +2,28 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="/arijang.github.io/favicon.png" />
+		<link rel="icon" href="/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/arijang.github.io/_app/immutable/entry/start.CMtIwzvF.js">
-		<link rel="modulepreload" href="/arijang.github.io/_app/immutable/chunks/entry.CmbBXyYX.js">
-		<link rel="modulepreload" href="/arijang.github.io/_app/immutable/chunks/scheduler.BvLojk_z.js">
-		<link rel="modulepreload" href="/arijang.github.io/_app/immutable/entry/app.DfGO1O-z.js">
-		<link rel="modulepreload" href="/arijang.github.io/_app/immutable/chunks/index.D1bVeg09.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.Dc2uf2ao.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.TIA4DivQ.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.BvLojk_z.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.C9Ghr8TW.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index.D1bVeg09.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_wecxay = {
-						base: "/arijang.github.io",
-						assets: "/arijang.github.io"
+					__sveltekit_flolf9 = {
+						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/arijang.github.io/_app/immutable/entry/start.CMtIwzvF.js"),
-						import("/arijang.github.io/_app/immutable/entry/app.DfGO1O-z.js")
+						import("/_app/immutable/entry/start.Dc2uf2ao.js"),
+						import("/_app/immutable/entry/app.C9Ghr8TW.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
