deploy: 4cd7da6499b2e580acc80801d669c786b82a9d8c

--- a/200.html
+++ b/200.html
@@ -2,29 +2,28 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="/arijang.github.io/favicon.png" />
+		<link rel="icon" href="/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/arijang.github.io/_app/immutable/entry/start.kLVCNECQ.js">
-		<link rel="modulepreload" href="/arijang.github.io/_app/immutable/chunks/entry.lDzuYFcp.js">
-		<link rel="modulepreload" href="/arijang.github.io/_app/immutable/chunks/scheduler.BvLojk_z.js">
-		<link rel="modulepreload" href="/arijang.github.io/_app/immutable/entry/app.e_dICMmX.js">
-		<link rel="modulepreload" href="/arijang.github.io/_app/immutable/chunks/index.D1bVeg09.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.BQ_1dcAw.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.CrtK6shG.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.BvLojk_z.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.BDwJsOl6.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index.D1bVeg09.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_4eiz23 = {
-						base: "/arijang.github.io",
-						assets: "/arijang.github.io"
+					__sveltekit_104lemq = {
+						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/arijang.github.io/_app/immutable/entry/start.kLVCNECQ.js"),
-						import("/arijang.github.io/_app/immutable/entry/app.e_dICMmX.js")
+						import("/_app/immutable/entry/start.BQ_1dcAw.js"),
+						import("/_app/immutable/entry/app.BDwJsOl6.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
