deploy: 88f2358e57dcfb3cfb5702bb987561ea66dea3e5

--- a/index.html
+++ b/index.html
@@ -6,20 +6,20 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
 		<link href="./_app/immutable/assets/2.Br5vIxwM.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.Du06qlLB.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.ByaTumQE.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.ZAfa-YEg.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.CBKJqweV.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.BvLojk_z.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.BIzTb_Jl.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.DJogvaUl.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.B4gDkw2S.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.CVGmraOo.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.Bn37eP5U.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.C2C2t46H.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">  <main class="svelte-1dp7egg"><h1 data-svelte-h="svelte-1ouan9e">Welcome to My Website</h1> <p data-svelte-h="svelte-cwlq2q">Check out the Go game by clicking the button below.</p> <button class="svelte-1dp7egg" data-svelte-h="svelte-1qq4zpo">Go to Go Game</button> </main> 
 			
 			<script>
 				{
-					__sveltekit_vrqzei = {
+					__sveltekit_1l3gtjt = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -28,8 +28,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.Du06qlLB.js"),
-						import("./_app/immutable/entry/app.BIzTb_Jl.js")
+						import("./_app/immutable/entry/start.ZAfa-YEg.js"),
+						import("./_app/immutable/entry/app.DJogvaUl.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
