deploy: 76d88a7c1d085482e79453cb7cdda8904fd7a461

--- a/index.html
+++ b/index.html
@@ -6,20 +6,20 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
 		<link href="./_app/immutable/assets/2.Br5vIxwM.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.BZOlpYrZ.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.B312_0Sa.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.C-Fsoe4q.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.Dd6KdA2d.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.BvLojk_z.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.dCad946T.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.D0gzRuEo.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.B4gDkw2S.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.CVGmraOo.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.Pq_L4L2h.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.Dby6cE0l.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">  <main class="svelte-1dp7egg"><h1 data-svelte-h="svelte-1ouan9e">Welcome to My Website</h1> <p data-svelte-h="svelte-cwlq2q">Check out the Go game by clicking the button below.</p> <button class="svelte-1dp7egg" data-svelte-h="svelte-1qq4zpo">Go to Go Game</button> </main> 
 			
 			<script>
 				{
-					__sveltekit_1dvf3uj = {
+					__sveltekit_166sn3y = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -28,8 +28,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.BZOlpYrZ.js"),
-						import("./_app/immutable/entry/app.dCad946T.js")
+						import("./_app/immutable/entry/start.C-Fsoe4q.js"),
+						import("./_app/immutable/entry/app.D0gzRuEo.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
