--- a/index.html
+++ b/index.html
@@ -6,20 +6,20 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
 		<link href="./_app/immutable/assets/2.Br5vIxwM.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.CDGJF1ss.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.wjHBhYkt.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.DrDOvuMD.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.D0NETcK-.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.BvLojk_z.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.z9wAdqvE.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.DGKe4WxR.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.CdL9KQoL.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.C_sTeCKH.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.DfH_soYP.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.C0GRFKLR.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">  <main class="svelte-1dp7egg"><h1 data-svelte-h="svelte-1ouan9e">Welcome to My Website</h1> <p data-svelte-h="svelte-cwlq2q">Check out the Go game by clicking the button below.</p> <button class="svelte-1dp7egg" data-svelte-h="svelte-1qq4zpo">Go to Go Game</button> </main> 
 			
 			<script>
 				{
-					__sveltekit_1ptqxjo = {
+					__sveltekit_j64pua = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -28,8 +28,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.CDGJF1ss.js"),
-						import("./_app/immutable/entry/app.z9wAdqvE.js")
+						import("./_app/immutable/entry/start.DrDOvuMD.js"),
+						import("./_app/immutable/entry/app.DGKe4WxR.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
