deploy: fcf44f5ef2c5b7bfc6f5bcd28dcf2075b0cb3636

--- a/go.html
+++ b/go.html
@@ -6,11 +6,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
 		<link href="./_app/immutable/assets/3.bqnf5F9_.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.DV-39IRG.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DvXz149Y.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.BtXdTAmC.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.CefXOUon.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.aZHIKDCl.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.Haq8omwQ.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.DkKfYunc.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.BFvkAMci.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.Cfc2DBzb.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.CQWSt0h9.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/3.B--zBlav.js">
@@ -20,7 +20,7 @@
 			
 			<script>
 				{
-					__sveltekit_16gg1tc = {
+					__sveltekit_yh43zq = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -29,8 +29,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.DV-39IRG.js"),
-						import("./_app/immutable/entry/app.DkKfYunc.js")
+						import("./_app/immutable/entry/start.BtXdTAmC.js"),
+						import("./_app/immutable/entry/app.BFvkAMci.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
