deploy: 5df0ef149883ab17ebe16f2b272b72b3a9c0aa96

--- a/index.html
+++ b/index.html
@@ -6,21 +6,21 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
 		<link href="./_app/immutable/assets/2.Br5vIxwM.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.BuSEtkyr.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.461xYhAD.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.BK_Yo2aj.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BhIdoUNf.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.aZHIKDCl.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.Haq8omwQ.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.C1Ou6muV.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.CCF5T5J6.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.Ci_2FZzr.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.DYBxiYZx.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.3AV8Joq_.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.BVxD57Vf.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">  <main class="svelte-1dp7egg"><h1 data-svelte-h="svelte-1ouan9e">Welcome to My Website</h1> <p data-svelte-h="svelte-cwlq2q">Check out the Go game by clicking the button below.</p> <button class="svelte-1dp7egg" data-svelte-h="svelte-1qq4zpo">Go to Go Game</button> </main> 
 			
 			<script>
 				{
-					__sveltekit_1z07wvt = {
+					__sveltekit_7050oi = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -29,8 +29,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.BuSEtkyr.js"),
-						import("./_app/immutable/entry/app.C1Ou6muV.js")
+						import("./_app/immutable/entry/start.BK_Yo2aj.js"),
+						import("./_app/immutable/entry/app.CCF5T5J6.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
